bug fix - Text in tabs not centered properly

--- a/app/assets/stylesheets/base.css
+++ b/app/assets/stylesheets/base.css
@@ -2219,6 +2219,9 @@ h2.center{
     font-size: 16px;
     text-indent: 10px;
 }
+.tabbable .nav li a {
+    text-indent: 0px;
+}
 .navbar .btn-navbar {
     display: none;
 }
